kubernetes/workloads/filebrowser/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: filebrowser-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: filebrowser
